--- a/slides.tex
+++ b/slides.tex
@@ -8,7 +8,6 @@
 \usetheme{Madrid}
 \usecolortheme{default}
 
-\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{fontspec}
 \usepackage{polyglossia}
@@ -18,6 +17,8 @@
 \usepackage{booktabs}
 \usepackage{amsmath,amssymb}
 \usepackage{tikz}
+\usetikzlibrary{positioning, arrows.meta}
+
 
 % Custom colors
 \definecolor{UnipiBlue}{RGB}{0,51,102}
@@ -113,6 +114,73 @@
       \end{itemize}
     \end{column}
   \end{columns}
+\end{frame}
+
+\begin{frame}{Identification process overview}
+\centering
+\begin{tikzpicture}[scale=0.65, every node/.style={scale=0.65, font=\small},
+    box/.style={
+        rectangle,
+        draw,
+        rounded corners,
+        align=center,
+        minimum width=5cm,
+        minimum height=0.8cm
+    },
+    smallbox/.style={
+        rectangle,
+        draw,
+        rounded corners,
+        align=center,
+        minimum width=2cm,
+        minimum height=0.7cm
+    },
+    arrow/.style={-Latex, thick}
+]
+
+% Top blocks
+
+\node[box] (data) {\textbf{Piraeus Vice Dataset} \\ 
+Continuous + Categorical features \\ 
+TRAIN / VAL / TEST split};
+
+\node[box, below=0.6cm of data] (prep) {\textbf{Preprocessing} \\ 
+StandardScaler + OneHotEncoder \\ 
+(Fitted on TRAIN only)};
+
+% Model row
+
+\node[smallbox, below=0.8cm of prep, xshift=-2.8cm] (bayes) {Gaussian Bayes \\ (MLE + Bayes)};
+\node[smallbox, right=0.3cm of bayes] (linear) {Linear \\ Classifier};
+\node[smallbox, right=0.3cm of linear] (svm) {SVM \\ (RBF)};
+\node[smallbox, right=0.3cm of svm] (mlp) {MLP \\ (64,32)};
+\node[smallbox, right=0.3cm of mlp] (kmeans) {PCA (m=5) \\ + k-means};
+
+\node[box, below=0.8cm of linear] (eval) {\textbf{Evaluation on VAL} \\ 
+Accuracy + Confusion Matrix};
+
+\node[box, below=0.6cm of eval] (test) {\textbf{Final TEST Predictions} \\ 
+Predicted Killer + Probabilities};
+
+% Arrows
+
+\draw[arrow] (data) -- (prep);
+
+\draw[arrow] (prep.south) -- (linear.north);
+\draw[arrow] (prep.south) -- (bayes.north);
+\draw[arrow] (prep.south) -- (svm.north);
+\draw[arrow] (prep.south) -- (mlp.north);
+\draw[arrow] (prep.south) -- (kmeans.north);
+
+\draw[arrow] (bayes.south) -- (eval.north);
+\draw[arrow] (linear.south) -- (eval.north);
+\draw[arrow] (svm.south) -- (eval.north);
+\draw[arrow] (mlp.south) -- (eval.north);
+\draw[arrow] (kmeans.south) -- (eval.north);
+
+\draw[arrow] (eval) -- (test);
+
+\end{tikzpicture}
 \end{frame}
 
 % ==============================================================
@@ -313,19 +381,22 @@
 \end{frame}
 
 \begin{frame}{Q6: Feature Importance (Permutation)}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.75\textwidth]{./images/Q6_diagrams/q6_top5_features.png}
-  \end{figure}
-  
-  \textbf{Top 5 Features:}
-  \begin{enumerate}
-    \item dist\_precinct\_km (ΔA = 0.07)
-    \item latitude (ΔA = 0.06)
-    \item victim\_age (ΔA = 0.05)
-    \item humidity (ΔA = 0.03)
-    \item pop\_density (ΔA = 0.02)
-  \end{enumerate}
+  \begin{columns}[T]
+    \begin{column}{0.55\textwidth}
+      \includegraphics[width=\textwidth]{./images/Q6_diagrams/q6_top5_features.png}
+    \end{column}
+    
+    \begin{column}{0.42\textwidth}
+      \textbf{Top 5 Features:}
+      \begin{enumerate}
+        \item dist\_precinct\_km \\ (ΔA = 0.07)
+        \item latitude (ΔA = 0.06)
+        \item victim\_age (ΔA = 0.05)
+        \item humidity (ΔA = 0.03)
+        \item pop\_density (ΔA = 0.02)
+      \end{enumerate}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 % ==============================================================
@@ -367,7 +438,7 @@
 \begin{frame}{Q8: Unsupervised k-means in PCA Space}
   \begin{block}{Approach}
     \begin{itemize}
-      \item Apply PCA (5 components) on TRAIN
+      \item Apply PCA (2 components) on TRAIN, VAL and TEST
       \item Run k-means with $k=8$ (number of killers)
       \item Map clusters to killers via majority voting
       \item Evaluate on VAL
@@ -376,11 +447,10 @@
   
   \vspace{1em}
   
-  \begin{alertblock}{Result}
-    \textbf{Lower accuracy than supervised methods.}
-    
+  \begin{block}{Result}
+    \textbf{81.3\%} VAL accuracy.
     Natural clusters in feature space do not perfectly align with killer identities.
-  \end{alertblock}
+  \end{block}
 \end{frame}
 
 \begin{frame}{Q8: Interpretation}
@@ -412,15 +482,15 @@
       SVM (RBF kernel)       & \textcolor{green!60!black}{\textbf{94.8\%}} \\
       MLP (2 hidden layers)  & \textcolor{green!60!black}{\textbf{94.4\%}} \\
       Gaussian Bayes         & 90.5\% \\
-      Linear Classifier      & 78.2\% \\
-      PCA + k-means          & \textcolor{red}{Lower} \\
+      PCA + k-means          & 81.3\% \\
+      Linear Classifier      & \textcolor{red!60!black}{78.2\%} \\
       \bottomrule
     \end{tabular}
   \end{table}
   
   \vspace{0.5em}
   
-  \textbf{Ranking:} SVM $\approx$ MLP $>$ Bayes $>$ Linear $>$ k-means
+  \textbf{Ranking:} SVM $\approx$ MLP $>$ Bayes $>$ PCA + $k$-means $>$ Linear
 \end{frame}
 
 \begin{frame}{Visual Insights Summary}
@@ -461,7 +531,7 @@
     \item \textbf{Feature importance:} Geographic + victim characteristics dominate
     \item \textbf{Gaussian assumption works:} Bayes classifier at 90\% is strong baseline
     \item \textbf{Linear limits:} Only 78\% — insufficient for complex patterns
-    \item \textbf{Unsupervised falls short:} k-means cannot match supervised performance
+    \item \textbf{Unsupervised falls short:} k-means cannot match supervised performance, even though it has a better accuracy than linear classifier.
   \end{enumerate}
 \end{frame}
 
@@ -473,27 +543,6 @@
       \item No data leakage (fit on TRAIN, apply to VAL/TEST)
       \item Systematic hyperparameter tuning
       \item Rich visualizations (heatmaps, ellipses, decision boundaries, PCA)
-    \end{itemize}
-  \end{block}
-\end{frame}
-
-\begin{frame}{Limitations \& Future Work}
-  \begin{block}{Limitations}
-    \begin{itemize}
-      \item Limited to provided features (no time series, network analysis)
-      \item Imbalanced classes (killers 3, 6, 7 dominate)
-      \item No ensemble methods explored
-    \end{itemize}
-  \end{block}
-  
-  \vspace{0.5em}
-  
-  \begin{block}{Future Directions}
-    \begin{itemize}
-      \item Ensemble models (voting, stacking)
-      \item Deep learning (CNN, attention mechanisms)
-      \item External data (social networks, historical patterns)
-      \item Explainability (SHAP, LIME)
     \end{itemize}
   \end{block}
 \end{frame}
